# namecheap-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: dns_email_setup.rs  dns_update_record.rs  quickstart.rs
src/: client.rs  domains.rs  error.rs  lib.rs  response.rs  users.rs
