[package]
name = "namecheap-client"
version = "0.1.1"
edition = "2021"
description = "Unofficial async Rust client for the Namecheap API: domain availability and registration, DNS records, pricing, and account management."
authors = ["Jackson Ballow <jackson@desync.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jackson-Desync/namecheap-client"
documentation = "https://docs.rs/namecheap-client"
readme = "README.md"
keywords = ["namecheap", "dns", "domains", "registrar", "api"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".github/", "/.gitignore"]

[features]
default = ["rustls"]
# Use rustls for TLS (pure-Rust stack, no system OpenSSL required).
rustls = ["reqwest/rustls"]
# Use the platform-native TLS stack (OpenSSL on Linux, SChannel on Windows, Secure Transport on macOS).
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["query"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.40", features = ["serialize"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
